<resources>
    <string name="app_name">WS2812B Controller</string>
    <string name="header_title" translatable="false">Header</string>
    <string name="item1" translatable="false">Item 1</string>
    <string name="item2" translatable="false">Item 2</string>

    <string name="pairedDevices">List of Paired Devices</string>
    <string name="discoveredDevices">List of Discovered Devices</string>

    <string name="swtOnOff">Switch</string>
    <string name="btnConnect">Connect</string>
    <string name="btnNext">Button Next</string>
    <string name="btnPrev">Button prevision</string>
    <string name="btnPause">Button Pause</string>
    <string name="bright">Bright</string>
    <string name="speed">Speed</string>
    <string name="modesTotalCount" translatable="false">/49</string>
    <string name="modePausedOrOff" translatable="false">0/49</string>

    <string name="pref_auto">Auto Play Settings</string>
    <string name="pref_auto_state">AutoPlay</string>
    <string name="pref_auto_state_summary">Enable Auto Play mode</string>
    <string name="pref_auto_duration">Duration</string>
    <string name="pref_auto_duration_summary">Set a duatation (seconds)</string>
    <string-array name="pref_auto_duration_value">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>240</item>

    </string-array>

    <string name="pref_play">Play List Settings</string>
    <string name="pref_play_random">Enable Random Change Mode</string>
    <string name="pref_play_random_summary">Enable Random Change Mode</string>

    <string name="pref_save">Save Settings</string>
    <string name="pref_save_autosave">Enable AutoSave</string>
    <string name="pref_save_autosave_summary">Enable AutoSave</string>
    <string name="pref_autosave_duration">AutoSave Duration (seconds)</string>
    <string name="pref_autosave_duration_summary">AutoSave Duration (seconds)</string>

    <string-array name="pref_autosave_duration_value">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>180</item>
        <item>240</item>
    </string-array>



    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->

    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <!-- Example settings for Notifications -->

</resources>
